--- a/src/Saorsa.Extensions/Saorsa.Extensions.csproj
+++ b/src/Saorsa.Extensions/Saorsa.Extensions.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>Saorsa</RootNamespace>
@@ -15,6 +14,11 @@
         <RepositoryUrl>https://github.com/saorsa/saorsa.extensions</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>saorsa extensions utility</PackageTags>
+        <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DocumentationFile>bin\Release\Saorsa.Extensions.xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
